# Snakegame

./: CMakeLists.txt
cmake/: SDL3_image.cmake
src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h
